<resources>
    <string name="app_name">药管家</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="welcome">"欢迎使用！"</string>
    <string name="invalid_username">无效的用户名</string>
    <string name="invalid_password">密码输入不能少于5个字符</string>
    <string name="login_failed">"登陆失败"</string>


    <string name="title_activity_add_alarm">添加闹钟</string>
    <string name="title_activity_edit_alarm">编辑闹钟</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_finish">退出</string>
    <string name="add_alarm">闹钟名</string>
    <string name="details">设置闹钟</string>
    <string name="date">Date</string>
    <string name="time">时间</string>
    <string name="repeat">响铃周期</string>
    <string name="repeat_off">Off</string>
    <string name="wake_method">停闹方式</string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_alarm">Discard Alarm</string>
    <string name="action_save_alarm">Save Alarm</string>
    <string name="no_alarm">点击 + 添加闹钟</string>
    <string name="popup_menu_edit">编辑</string>
    <string name="popup_menu_delete">删除</string>
    <string name="popup_menu_more">期待更多</string>
    <string name="shengming">"    Software by bll"</string>
    <string name="app_name_ver">勤补水、忌辛辣、合理安排作息时间</string>
    <string name="email">邮箱：</string>
    <string name="github">GitHub：</string>
    <string name="emali_adress">" 边亮亮"</string>
    <string name="github_adress">" github.com/MedcialWatcher"</string>
    <string name="ring_type">响铃方式</string>
    <string name="calculate_name">数学计算</string>
    <string name="ca_details">随机生成数学计算题，需回答正确关闭闹钟</string>
    <string name="ca_set">点我设置</string>
    <string name="question">自定义问题</string>
    <string name="que_details">自定义问题和答案，回答正确才能关闭闹钟</string>
    <string name="que_set">点我设置</string>
    <string name="set_que">请输入您的问题：</string>
    <string name="an_input">请输入问题的答案：</string>
    <string name="que_sure">确定并保存</string>
    <string name="que_can">取消</string>
    <string name="answer_hint">答案输在这儿...</string>
    <string name="input_complete">输入好了</string>
    <string name="alarm_complete">闹钟时间到</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YaoGuanJia</string>
    <string name="nav_header_subtitle">YaoGuanJia@medicine.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scan">扫一扫</string>
    <string name="menu_Alarm">闹钟设置</string>
    <string name="menu_addcase">添加药盒</string>
    <string name="menu_suggestion">异常申报</string>
    <string name="menu_exit">退出登录</string>
    <string name="login">登录</string>
    <string name="login_register_hint">注册</string>
    <string name="register_input_username_hint">请输入您的用户名</string>
    <string name="register_password">请输入您的密码</string>
    <string name="register_nick_name">请确认一次您输入的密码</string>

</resources>
