<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@mipmap/tx_back"

    tools:context=".ui.login.LoginActivity">

<View
    android:background="#88000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
<LinearLayout
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="70dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_login_username"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_username_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_singup_mobile" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="15"
            android:focusable="true"
            android:hint="@string/register_input_username_hint"
            android:imeOptions="actionDone"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="11"
            android:inputType="textAutoComplete"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_18" />

        <ImageView
            android:id="@+id/iv_login_username_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_pwd_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_login_password" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:imeOptions="actionDone"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:selectAllOnFocus="true"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_18" />

        <ImageView
            android:id="@+id/iv_login_pwd_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_submit_lock"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop" />
        <Button
            android:id="@+id/bt_login_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_register"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login_register_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            android:translationZ="0dp"
            tools:targetApi="lollipop" />

    </LinearLayout>
</LinearLayout>







    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"

         />
</FrameLayout>